fix: modal img on mobile view

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ header {
     width: 100%;
     height: 100%;
     & .modal__img {
-      width: 20rem;
+      width: max(10rem,20vw);
       margin: auto;
     }
   }
